# physiodiff

./: .gitignore  CLAUDE.md  README.md  physiolang_spec.md  pyproject.toml  requirements.txt
.claude/: launch.json
app/: main.py  sentiment_analysis.py  synthetic_data.py
app/models/: dhs_algorithm.py  risk_modeling.py
app/reports/: handover.py
app/services/: __init__.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: app.js
app/synthetic/: mock_engine.py
docs/: ACUHIT_Proposals.docx  ARCHITECTURE.md
scripts/: validate.py
tests/: test_api.py  test_dhs_algorithm.py  test_mock_engine.py  test_risk_modeling.py  test_sentiment.py
